tests/integration/snapshots/integration__conformance__y_object_duplicated_key_and_value.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
{"a":"b","a":"b"}
stdout ---
{
    "a": "b",
    "a": "b"
}

stderr ---
