tests/integration/snapshots/integration__conformance__y_object_empty.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
{}
stdout ---
{

}

stderr ---
