tests/integration/snapshots/integration__conformance__y_object_empty_key.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"":0}
stdout ---
{"":0}

stderr ---
