tests/integration/snapshots/integration__conformance__y_object_empty_key.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"":0}
stdout ---
{ "": 0 }

stderr ---
