tests/integration/snapshots/integration__conformance__y_object_empty_key.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
{"":0}
stderr ---
