tests/integration/snapshots/integration__conformance__y_object_escaped_null_in_key.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"foo\u0000bar": 42}
stdout ---
{ "foo\u0000bar": 42 }

stderr ---
