tests/integration/snapshots/integration__conformance__y_object_escaped_null_in_key.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
{"foo\u0000bar": 42}
stderr ---
